# deleterr

./: .gitignore  Cargo.toml  README.md  deleterr.db  deleterr.db.wal
docker_dev/: default.conf  nginx.yml
migrations/: 20241028160851_create_requestswithstatus.sql  20241028184035_create_services.sql  20241028185236_create_users.sql
src/: main.rs
src/auth/: models.rs  services.rs
src/common/: broadcast.rs  mod.rs  models.rs  services.rs
src/common/models/: api.rs  deleterr_error.rs  exemptions.rs  services.rs
src/db/: services.rs
src/deleterr/: cache.rs  endpoints.rs  mod.rs  models.rs  requests.rs  services.rs  tests.rs  watched.rs
src/deleterr/services/: common.rs  movie.rs  series.rs
src/overseerr/: mod.rs  models.rs  overseerr.rs  seasons.rs  services.rs
src/polodb/: services.rs
src/radarr/: models.rs  services.rs
src/sonarr/: mod.rs  models.rs  series.rs  services.rs
src/sonrad/: models.rs  services.rs
src/sqlite/: models.rs  services.rs
src/store/: exemptions.rs  mod.rs  models.rs  services.rs  store.rs
src/store/models/: exemptions.rs  settings.rs
src/store/services/: common.rs  media_exemptions.rs  services.rs  settings.rs  users.rs
src/tautulli/: mod.rs  models.rs  services.rs  user_watch_history.rs
webapp/: .eslint.json  .eslintrc.json  .prettierignore  .prettierrc  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
webapp/src/: App.vue  main.ts  style.css
webapp/src/@types/: common.ts  deleterr.ts  request-list.ts  services.ts  settings.ts  table.ts
webapp/src/components/: Actions.vue  AllServices.vue  BlankPage.vue  CTA.vue  Cards.vue  ContentCard.vue  Datatable.vue  DatatableRow.vue  Error.vue  Header.vue  Logo.vue  NewPassword.vue  PageLoading.vue  Pagination.vue  PaginationButton.vue  Service.vue  Settings.vue  SettingsItem.vue  Sidebar.vue  StatusPill.vue  Warning.vue
webapp/src/components/Actions/: Delete.vue  DeleteSeries.vue  Exemption.vue
webapp/src/components/Buttons/: Base.vue  Outline.vue  Regular.vue  Status.vue  Statused.vue
webapp/src/components/Indicators/: Error.vue  Loading.vue
webapp/src/components/Inputs/: Checkbox.vue  Input.vue  InputRightButton.vue  RadioButtons.vue  Select.vue  ServiceGroup.vue  SettingsGroup.vue
webapp/src/components/Pagination/: Item.vue  Next.vue  PageCount.vue  Previous.vue  Truncation.vue  Wrapper.vue
webapp/src/components/Requests/: Heading.vue  List.vue  Row.vue  Table.vue  (+1 more)
webapp/src/composables/: useDarkMode.ts  useDeleteSeries.ts  useListQuery.ts  useQueryURL.ts  useRequests.ts  useService.ts  useServiceSave.ts  useServiceSaveTest.ts  useServiceTest.ts  useSettings.ts  useSideMenu.ts  useToast.ts
webapp/src/stores/: auth.store.ts  requests.store.ts  requests.ts  services.store.ts  settings.store.ts
webapp/src/views/: 404.vue  Dashboard.vue  Login.vue  Page.vue  Services.vue  Settings.vue  Setup.vue
(+15 files in other folders)
