[package]
name = "deleterr"
version = "0.1.0"
edition = "2021"
exclude = ["webapp/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.107"
strum_macros = "0.25.2"
strum = { version = "^0.25", features = ["derive"] }
dotenv = "0.15.0"
serde-aux = "4.2.0"
tokio = { version = "1.33.0", features = ["macros", "time"] }
actix-files = "0.6.2"
actix-web-lab = { version = "0.20.0", features = ["spa"] }
num-integer = "0.1.45"
actix-cors = "0.6.4"
serde-map-to-array = { version = "1.1.1", features = ["std"] }
chrono = { version = "0.4.31", features = ["serde"] }
persy = "1.4.5"
once_cell = "1.18.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
