[package]
name = "deleterr"
version = "0.1.0"
edition = "2021"
exclude = ["webapp/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
env_logger = "0.11.5"
log = "0.4.20"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.107"
strum_macros = "0.26.4"
strum = { version = "^0.26.3", features = ["derive"] }
dotenv = "0.15.0"
serde-aux = "4.2.0"
tokio = { version = "1.33.0", features = ["macros", "time"] }
actix-files = "0.6.2"
actix-web-lab = { version = "0.23.0", features = ["spa"] }
num-integer = "0.1.45"
actix-cors = "0.7.0"
serde-map-to-array = { version = "1.1.1", features = ["std"] }
chrono = { version = "0.4.31", features = ["serde"] }
actix-session = { version = "0.10.1", features = ["cookie-session"] }
bcrypt = "0.15.0"
jammdb = "0.11.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls"] }
futures = "0.3.31"
async-stream = "0.3.6"
futures-util = "0.3.31"
tokio-stream = "0.1.16"
parking_lot = "0.12.3"
actix-rt = "2.10.0"
uuid = { version = "1.11.0", features = ["v4"] }
